# windows-clipper

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTORS.md  LICENSE  NEXT_STEPS.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  README_BUILD.md  install_ffmpeg.ps1  run.py  skills-lock.json
.github/workflows/: build.yml
backend/: backend.spec  main.py  requirements.txt
backend/core/: config.py  exceptions.py
backend/models/: analysis.py  clip.py  video.py
backend/services/: analyzer.py  cache.py  detector.py  downloader.py  editor.py  scorer.py  transcriber.py
backend/utils/: audio_utils.py  file_utils.py  video_utils.py
docs/: API_KEY_SETUP_GUIDE.md  API_REFERENCE.md  AUTOMATED_BUILD_GUIDE.md  BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GITHUB_CICD_GUIDE.md  INSTALLATION_GUIDE.md  QUICK_BUILD_GUIDE.md  QUICK_START.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  create_icons.ps1  tauri.conf.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: BackendSplash.tsx
frontend/src/components/Clips/: ClipCard.tsx  ClipList.tsx
frontend/src/components/Input/: GenerateButton.tsx  (+2 more)
frontend/src/hooks/: useClips.ts  useLog.ts  useVideoProcessing.ts  useWebSocket.ts
frontend/src/services/: api.ts  settingsStorage.ts  websocket.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  settings.ts
(+13 files in other folders)
