[package]
name = "ai-clipper"
version = "1.0.0"
description = "AI-powered viral clip generator"
authors = ["AI Clipper Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "fs-read-file", "fs-copy-file", "dialog-open", "fs-write-file", "fs-read-dir", "fs-exists", "fs-remove-dir", "fs-remove-file", "fs-create-dir", "dialog-save", "shell-open", "http-request"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
